--- a/AliasApp/AliasApp/Views/Base.lproj/Main.storyboard
+++ b/AliasApp/AliasApp/Views/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="GUd-md-Xse">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
@@ -87,13 +87,94 @@
                     <view key="view" contentMode="scaleToFill" id="Yx8-dn-BaX">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="XHB-II-prr">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <subviews>
+                                    <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="z8Q-LN-5yF" userLabel="LabelView">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="404"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="вопросов" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="I10-TV-l7I">
+                                                <rect key="frame" x="142.5" y="223.5" width="129.5" height="36"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Выберите категорию" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="BMG-ia-Puu">
+                                                <rect key="frame" x="64" y="179.5" width="286.5" height="36"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rzb-2A-k5T" userLabel="ButtonView">
+                                        <rect key="frame" x="0.0" y="414" width="414" height="404"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jgH-lh-VdD">
+                                                <rect key="frame" x="220" y="200" width="180" height="180"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" cornerStyle="small">
+                                                    <backgroundConfiguration key="background" image="PhysicsButton"/>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="physicsButton:" destination="GUd-md-Xse" eventType="touchUpInside" id="Q01-bx-pCM"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="msV-Qb-R1S">
+                                                <rect key="frame" x="22" y="200" width="180" height="180"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" cornerStyle="small">
+                                                    <backgroundConfiguration key="background" image="BiologyButton"/>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="biologyButton:" destination="GUd-md-Xse" eventType="touchUpInside" id="VCa-H1-jg0"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hxd-gd-wfv">
+                                                <rect key="frame" x="22" y="8" width="180" height="180"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" cornerStyle="small">
+                                                    <backgroundConfiguration key="background" image="ScienceButton"/>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="scienceButton:" destination="GUd-md-Xse" eventType="touchUpInside" id="Hg3-ek-fgC"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LYt-UW-X99">
+                                                <rect key="frame" x="220" y="12" width="180" height="180"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" cornerStyle="small">
+                                                    <backgroundConfiguration key="background" image="ChemistryButton"/>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="chemistryButton:" destination="GUd-md-Xse" eventType="touchUpInside" id="YpF-3a-7N2"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </view>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="upy-lO-tkX"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                        <constraints>
+                            <constraint firstItem="upy-lO-tkX" firstAttribute="bottom" secondItem="XHB-II-prr" secondAttribute="bottom" id="bPa-DO-REE"/>
+                            <constraint firstItem="XHB-II-prr" firstAttribute="top" secondItem="upy-lO-tkX" secondAttribute="top" id="o15-LP-9Zq"/>
+                            <constraint firstItem="XHB-II-prr" firstAttribute="leading" secondItem="upy-lO-tkX" secondAttribute="leading" id="tbG-7C-BHI"/>
+                            <constraint firstItem="XHB-II-prr" firstAttribute="trailing" secondItem="upy-lO-tkX" secondAttribute="trailing" id="w0t-K6-H35"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZPu-m5-KKR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="662" y="405"/>
+            <point key="canvasLocation" x="660.86956521739137" y="404.46428571428572"/>
         </scene>
         <!--Guess View Controller-->
         <scene sceneID="3Zr-ON-R5c">
@@ -128,9 +209,16 @@
     </scenes>
     <resources>
         <image name="ALIAS" width="1200" height="900"/>
+        <image name="BiologyButton" width="245" height="245"/>
+        <image name="ChemistryButton" width="245" height="245"/>
+        <image name="PhysicsButton" width="245" height="245"/>
+        <image name="ScienceButton" width="245" height="245"/>
         <namedColor name="Background">
-            <color red="0.74901960779999999" green="0.054901960780000002" blue="0.054901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.74900001287460327" green="0.054999999701976776" blue="0.054999999701976776" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="opaqueSeparatorColor">
+            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
