--- a/AliasApp/AliasApp/Views/Base.lproj/Main.storyboard
+++ b/AliasApp/AliasApp/Views/Base.lproj/Main.storyboard
@@ -192,16 +192,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Слово" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RXZ-WF-k5E">
-                                <rect key="frame" x="107" y="70" width="200" height="78"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="XNy-BP-cjO"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="60"/>
+                                <rect key="frame" x="10" y="70" width="394" height="52"/>
+                                <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="40"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="48" translatesAutoresizingMaskIntoConstraints="NO" id="760-VV-kxd">
-                                <rect key="frame" x="122.5" y="208" width="169.5" height="231"/>
+                                <rect key="frame" x="122.5" y="182" width="169.5" height="231"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vid-ac-7U9">
                                         <rect key="frame" x="0.0" y="0.0" width="169.5" height="45"/>
@@ -260,7 +257,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="6ES-fv-fsO">
-                                <rect key="frame" x="20" y="474" width="107.5" height="36"/>
+                                <rect key="frame" x="20" y="448" width="107.5" height="36"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Счет:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Epw-hs-mcP">
                                         <rect key="frame" x="0.0" y="0.0" width="79.5" height="36"/>
@@ -284,7 +281,9 @@
                             <constraint firstItem="760-VV-kxd" firstAttribute="centerX" secondItem="g6C-BO-JFm" secondAttribute="centerX" id="Esv-aJ-YDT"/>
                             <constraint firstItem="760-VV-kxd" firstAttribute="top" secondItem="RXZ-WF-k5E" secondAttribute="bottom" constant="60" id="Gfz-tb-6kv"/>
                             <constraint firstItem="RXZ-WF-k5E" firstAttribute="centerX" secondItem="g6C-BO-JFm" secondAttribute="centerX" id="JX5-Iv-TxU"/>
+                            <constraint firstItem="f6e-9J-VTd" firstAttribute="trailing" secondItem="RXZ-WF-k5E" secondAttribute="trailing" constant="10" id="PTZ-JA-ySi"/>
                             <constraint firstItem="6ES-fv-fsO" firstAttribute="top" secondItem="760-VV-kxd" secondAttribute="bottom" constant="35" id="hTg-67-nHe"/>
+                            <constraint firstItem="RXZ-WF-k5E" firstAttribute="leading" secondItem="f6e-9J-VTd" secondAttribute="leading" constant="10" id="iUk-eY-t8e"/>
                             <constraint firstItem="RXZ-WF-k5E" firstAttribute="top" secondItem="f6e-9J-VTd" secondAttribute="top" constant="70" id="jex-nc-Ov9"/>
                         </constraints>
                     </view>
